# sdlraycaster

./: .gitmodules  CMakeLists.txt  README.md
lib/swm/: matrix.h  swm.h
src/: Framebuffer.cpp  Framebuffer.h  Main.cpp  Map.h  Utils.cpp  Utils.h  Window.cpp  Window.h  framebuffer.cpp  framebuffer.h  main.cpp  map.h  model.h  sdlraycaster.cpp  sdlraycaster.h  utils.cpp  utils.h  window.cpp  window.h  world.cpp  world.h
src/lighting/: basic_light.h  point_light.h
src/model/: cube.h  heart.h  model.cpp  model.h  scene_object.cpp  scene_object.h  vertex.h  world_element.h
src/rasterizer/: rasterizer.cpp  rasterizer.h
test/: CMakeLists.txt
test/lib/swm/: test_swm.h
test/src/: test_fixture.h  test_world.cpp
